hk8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: dennis-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        #image: paulbouwer/hello-kubernetes:1.7
        image: nginxdemos/hello:latest
        ports:
        #- containerPort: 8080
        - containerPort: 80
