hk8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hk8s-svc
  namespace: dennis-lab
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
