hello-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hk8s-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hk8s
  namespace: hk8s
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: hk8s-hk8s.2886795298-80-lando01.environments.katacoda.com
  to:
    kind: Service
    name: hk8s-svc
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
